--- a/DSF_ASOS_Build_and_Deploy_a_Recommender_in_3_Hours-PERSONAL.ipynb
+++ b/DSF_ASOS_Build_and_Deploy_a_Recommender_in_3_Hours-PERSONAL.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "(This workbook was completed during the session by Arvindra Sehmi. All mistakes are my own. Use at your own discretion.)\n",
     "\n",
-    "### *** _BEST TO RUN THIS IN GPU MODE IN GOOGLE COLLAB_ ***"
+    "### *** _BEST TO RUN THIS IN GPU MODE IN GOOGLE COLAB_ ***"
    ]
   },
   {
@@ -1580,7 +1580,7 @@
    },
    "source": [
     "# Save the model\n",
-    "### _This part works only in collab_"
+    "### _This part works only in colab_"
    ]
   },
   {
